@@ -10,10 +10,6 @@ camel/camel-exchange-provider.c
 camel/camel-exchange-store.c
 camel/camel-exchange-transport.c
 camel/camel-stub.c
-lib/e2k-autoconfig.c
-lib/e2k-security-descriptor.c
-lib/e2k-sid.c
-lib/e2k-user-dialog.c
 mail/mail-stub-exchange.c
 shell/e-folder-creation-dialog.c
 shell/e-folder-creation-dialog.glade
@@ -23,31 +19,21 @@ shell/e-foreign-folder-dialog.glade
 shell/e-storage-set-view.etspec
 shell/e-storage.c
 storage/GNOME_Evolution_Exchange_Storage.server.in.in
-storage/exchange-account.c
 storage/exchange-autoconfig-wizard.c
 storage/exchange-autoconfig-wizard.glade
 storage/exchange-change-password.c
 storage/exchange-change-password.glade
 storage/exchange-component.c
 storage/exchange-config-listener.c
-storage/exchange-delegates-user.c
-storage/exchange-delegates.c
-storage/exchange-delegates.glade
-storage/exchange-folder-size.c
-storage/exchange-folder-tree.glade
 storage/exchange-hierarchy-foreign.c
 storage/exchange-migrate.c
 storage/exchange-oof.c
 storage/exchange-oof.glade
 storage/exchange-passwd-expiry.glade
-storage/exchange-permissions-dialog.c
 storage/exchange-permissions-dialog.glade
 storage/exchange-storage.c
 storage/main.c
-storage/xc-backend-view.c
-storage/xc-commands.c
 storage/ximian-connector-setup.c
 storage/ximian-connector.xml
 calendar/e-cal-backend-exchange.c
 camel/camel-exchange-journal.c
-lib/e2k-autoconfig.c
