@@ -1,3 +1,8 @@
+2005-07-16  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* POTFILES.in : Removed some files from translation. These are
+	no longer being used from here.
+
 2005-07-14  Danilo Šegan  <danilo@gnome.org>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation by Igor
